tests/ui/submit-unrecognized.stderr
error[E0277]: the trait bound `Thing: Collect` is not satisfied
   --> tests/ui/submit-unrecognized.rs:3:1
    |
3   | inventory::submit!(Thing);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Collect` is not implemented for `Thing`
    |
note: required by a bound in `submit`
   --> src/lib.rs
    |
    | pub fn submit<T: Collect>(value: T) {
    |                  ^^^^^^^ required by this bound in `submit`
    = note: this error originates in the macro `$crate::impl::submit` (in Nightly builds, run with -Z macro-backtrace for more info)
